# TestOpenCV

./: .gitignore  CMakeLists.txt  test.cpp
.github/workflows/: main.yml
111/: opencv_world420d.lib
